--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,8 +1,8 @@
 name: freedomotic_user_manual_docs
 dependencies:
-- python==3.5
-- sphinx_rtd_theme
-- pip:
+  - python=3.5
+  - sphinx_rtd_theme
+  - pip:
     - sphinx==1.5.6
     - recommonmark
     - nbsphinx
